tm-core/tests/snapshots/emit_planner__plan_basic_early_emit.snap
---
source: tm-core/tests/emit_planner.rs
expression: "rendered(&day, &fx.tree, &fx.cfg, 7, 0)"
---
<!-- tm:plan start 07:00 -->
06:10  ·    ✓ breakfast 30m                         (30m)
07:00  4 p3   Exercises 5.3–5.5            @m1  2b
08:00  5 p3   Finish ch.5 exercises        @O1  6b
09:00  1 p0 ⚠ Pick up package                   20m     due today
09:20  5 p3   Finish ch.5 exercises        @O1  6b
10:20  5 p3   Finish ch.5 exercises        @O1  6b
11:30  ·      lunch 30m
12:00  4 p3   Rollback path passes tests   @O2  6b
12:50  ⏰     Meeting w/ host                   1h
13:50  4 p3   Rollback path passes tests   @O2  6b
14:50  ·      break 20m
15:10  ·      rest 50m
16:00  ───    window ends 16:00
16:00  ·      workout 1h
17:00  ·      laundry 30m
17:30  ·      dinner 30m
18:00  ·      groceries 45m
18:45  ·      shower 20m
19:05  ○      Severance S3E4                    1h
21:30  🌙     wind-down · bed 22:00
22:00  ·      sleep 8h30m
<!-- tm:plan end -->

svg
  <defs>: yes
  class="plan": yes
  id="tm-lost": yes
  class="cursor": yes
  breakfast · 30m · ci1
  Exercises 5.3–5.5 · 1h · ci4 · p3 · @O1
  Finish ch.5 exercises · 1h · ci5 · p3 · @O1
  Pick up package · 20m · ci1 · p0
  Finish ch.5 exercises · 1h · ci5 · p3 · @O1
  Finish ch.5 exercises · 1h · ci5 · p3 · @O1
  lunch · 30m · ci1 · p0
  Rollback path passes tests · 50m · ci4 · p3 · @O2
  Meeting w/ host · 1h · ci3 · p0
  Rollback path passes tests · 1h · ci4 · p3 · @O2
  break · 20m
  rest · 50m · ci3
  workout · 1h · ci1 · p0
  laundry · 30m · ci1 · p5
  dinner · 30m · ci1 · p0
  groceries · 45m · ci1 · p5
  shower · 20m · ci1 · p5
  Severance S3E4 · 1h · ci0 · p5
  wind-down · 30m
  sleep · 2h · ci0 · p5
